--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>lu.amazon.aws.demo</groupId>
   <artifactId>WebApp</artifactId>
-  <packaging>ear</packaging>
+  <packaging>war</packaging>
   <version>1.0-SNAPSHOT</version>
   <name>WebApp Poagilers</name>
   <url>http://maven.apache.org</url>
@@ -14,14 +14,19 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
-   <dependency>
-	  <groupId>javax.servlet</groupId>
-	  <artifactId>jstl</artifactId>
-	  <version>1.2</version>
-	  <scope>runtime</scope>
-	</dependency>
-  </dependencies>
+   
   <build>
     <finalName>WebApp</finalName>
+	  <plugins>
+    <plugin>
+      <groupId>org.apache.maven.plugins</groupId>
+      <artifactId>maven-war-plugin</artifactId>
+      <version>3.0.0</version>
+      <configuration>
+        <webappDirectory>WebContent/</webappDirectory>
+      </configuration>
+     
+    </plugin>
+  </plugins>
   </build>
 </project>
