--- a/pom.xml
+++ b/pom.xml
@@ -23,5 +23,16 @@
   </dependencies>
   <build>
     <finalName>WebApp</finalName>
+	   <plugins>
+    <plugin>
+      <groupId>org.apache.maven.plugins</groupId>
+      <artifactId>maven-war-plugin</artifactId>
+      <version>3.0.0</version>
+      <configuration>
+        <webappDirectory>WebContent/</webappDirectory>
+      </configuration>
+
+    </plugin>
+  </plugins>
   </build>
 </project>
