--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@
       <artifactId>maven-war-plugin</artifactId>
       <version>3.0.0</version>
       <configuration>
-        <webappDirectory>WebContent/</webappDirectory>
+        <webappDirectory>TesteChallengeKaueLari/WebContent/</webappDirectory>
       </configuration>
 
     </plugin>
