--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,11 @@
 	  <scope>runtime</scope>
 	</dependency>
   </dependencies>
+	  <properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <maven.compiler.source>1.7</maven.compiler.source>
+    <maven.compiler.target>1.7</maven.compiler.target>
+  </properties>
   <build>
     <finalName>WebApp</finalName>
 	     <plugins>
