--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,18 @@
 	  <artifactId>jstl</artifactId>
 	  <version>1.2</version>
 	  <scope>runtime</scope>
-	</dependency>
+  </dependency>
+    <dependency>
+	    <groupId>javax.servlet.jsp</groupId>
+	    <artifactId>jsp-api</artifactId>
+	    <version>2.1</version>
+    </dependency>
+	  <dependency>
+	    <groupId>javax.servlet</groupId>
+	    <artifactId>javax.servlet-api</artifactId>
+	    <version>3.0.1</version>
+	    <scope>provided</scope>
+        </dependency>
   </dependencies>
 	  <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
