--- a/pom.xml
+++ b/pom.xml
@@ -6,11 +6,9 @@
   <packaging>war</packaging>
   <version>1.0-SNAPSHOT</version>
   <name>WebApp Poagilers</name>
+   <url>http://maven.apache.org</url>
   
-  <groupId>com.sarav</groupId>
-  <artifactId>TomcatMavenApp</artifactId>
-  <version>2.0</version>
-  <packaging>war</packaging>
+ 
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
